# dr.kai-api

./: .gitignore  README.md  api.py  api.py.backup  main.py  medical_database.py  medical_search_tool.py  pyproject.toml  test_api.py  translation_utils.py  web_search.py
conversations/: conv_b37646cf8365a018.json  conv_c952fc530fbd7a8a.json  conv_e2b85f817a556df3.json  conv_edfa8486629cef18.json
